# galerkin

./: .gitignore  MESHING.md  README.md  environment.yml  pyproject.toml  run.sh
codes1d/python/: AdvecDriver1D.py  Mesh.py
codes2d/resources/mesh/: new-mesh2.msh
codes2d/resources/mesh/msh/: new-mesh.msh  new-mesh2.geo  new-mesh2.msh  small.msh
codes2d/resources/mesh/tri/trimeshGen/: SConstruct
codes2d/resources/output/: model.param
codes2d/resources/source/: ricket_14_5.src  ricket_7_5.src  source.src
codes2d/resources/source/srcGen/: srcGen.py
codes2d/src/: Mesh2D.py  generateSource.py  main.py  nodalDG.py  plotField.py  plotFieldDGCrack.py  plot_src_support.py  polynomials.py  quadrature_int.py  seismogram.py  seismogram_analitic.py  wave2D.py  wave2D2.py
examples/1d/: .gitignore  Advec1D.py  AdvecRHS1D.py  Globals.py  Jacobi.py
resources/mesh/: mesh.geo  new-mesh.geo  new-mesh2.geo  small.geo
resources/mesh/msh/: mesh.msh  untitled.geo  untitled.msh
resources/mesh/tri/trimeshGen/: Mesh2D.py  layers_model.json  onelayer.json  progress.py  twolayers.json  view_mesh.py
resources/mesh/tri/trimeshGen/include/: Mesh.h  Node.h
resources/mesh/tri/trimeshGen/src/: Node.cc  Triangle.cc  meshing
resources/source/: gauss_rtp5.src  ricket_7_5.src  source.src  wavelet_lamb.src
scripts/: generate_param_from_mesh.py  plot_field.py  plot_src.py  plot_src_support.py  polynomials.py  quadrature_int.py  visualize.py  wavelet_generator.py
src/galerkin/: Mesh2D.py  cubatureData2D.py  exact-sol.py  generateSource.py  main.py  nodalDG.py  plotField.py  plotFieldDGCrack.py  plotSimulationTime.py  plot_src.py  plot_src_support.py  polynomials.py  quadrature_int.py  run.sh  seismogram.py  seismogram_analitic.py  wave2D.py  wave2D2.py
(+4 files in other folders)
